Feature/syntax diff panel (#123)